--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5435/intbnk_test
 spring.datasource.username=test
 spring.datasource.password=test
 spring.data.jdbc.dialect=postgresql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Flyway Migrations
